current scope