@@ -54,7 +54,7 @@ public class ClassGeneratorTest {
         cl.getField("FNAME").set(null, fname);
 
         System.out.println(cl.getName());
-        Builder<String> builder = (Builder<String>) cl.newInstance();
+        Builder<String> builder = (Builder<String>) cl.getDeclaredConstructor().newInstance();
         System.out.println(b.getName());
         builder.setName(b, "ok");
         System.out.println(b.getName());
@@ -84,7 +84,7 @@ public class ClassGeneratorTest {
         cl.getField("FNAME").set(null, fname);
 
         System.out.println(cl.getName());
-        Builder<String> builder = (Builder<String>) cl.newInstance();
+        Builder<String> builder = (Builder<String>) cl.getDeclaredConstructor().newInstance();
         System.out.println(b.getName());
         builder.setName(b, "ok");
         System.out.println(b.getName());
